更新：功能模块

--- a/projects/integrate/admin/admin.component.html
+++ b/projects/integrate/admin/admin.component.html
@@ -8,7 +8,7 @@
             <li nz-menu-item nzMatchRouter [routerLink]="['application', 'factory']">
               <i nz-icon nzType="layout"></i> <span>内容生成器</span>
             </li>
-            <li nz-menu-item nzMatchRouter [routerLink]="['application', 'function']">
+            <li nz-menu-item nzMatchRouter [routerLink]="['application', 'functions']">
               <i nz-icon nzType="switcher"></i> <span>功能模块</span>
             </li>
           </ul>
