--- a/projects/integrate/admin/security/audit/audit.component.html
+++ b/projects/integrate/admin/security/audit/audit.component.html
@@ -53,7 +53,7 @@
       </nz-descriptions>
       <nz-list-item-extra>
         <button nz-button nzType="primary" nzShape="circle" nzDanger nz-tooltip="禁用账户" (click)="blockUser(item)">
-          <i nz-icon nzType="pause"></i>
+          <i nz-icon nzType="user-delete"></i>
         </button>
       </nz-list-item-extra>
     </nz-list-item>
