--- a/projects/integrate/admin/application/factory/tab-schema/form/form.component.html
+++ b/projects/integrate/admin/application/factory/tab-schema/form/form.component.html
@@ -70,7 +70,7 @@
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label>隐藏字段</nz-form-label>
+        <nz-form-label>私有字段</nz-form-label>
         <nz-form-control nzExtra="该字段不会在通用请求中">
           <nz-switch formControlName="hide"></nz-switch>
         </nz-form-control>
