--- a/projects/integrate/admin/application/factory/home/home.component.html
+++ b/projects/integrate/admin/application/factory/home/home.component.html
@@ -4,17 +4,15 @@
     <div nz-result-content>
       <p>
         🔥
-        在树视图中点击任意【节点】来查看内容模型，通过【鼠标右键】获得更多操作、【鼠标右键】进行排序，以下为内容模型主要支持类型：
+        在左侧导航中点击任意【节点】来查看内容模型，通过【鼠标右键】获得更多操作、【拖拽】进行排序与重组，以下为内容生成器主要支持类型：
       </p>
       <div>
         <ul style="list-style: none">
-          <li>【<i nz-icon nzType="database"></i> 数据集】创建一个集合，生成表格页面并包含数据表单功能；</li>
-          <li>【<i nz-icon nzType="form"></i> 数据表单】创建一个集合，生成数据表单页面；</li>
-          <li
-            >【<i nz-icon nzType="tags"></i> 数据标签】创建一个集合，用于支持数据标签引用，创建后在『资源』中管理；
+          <li> <i nz-icon nzType="database"></i>【数据集】创建数据集合，生成表格、表单等； </li>
+          <li>
+            <i nz-icon nzType="calculator"></i>【数据聚合】引用数据集合，生成数据汇总与趋势分析的表格、统计图等；
           </li>
-          <li>【<i nz-icon nzType="dashboard"></i> 数据统计】引用数据聚合，生成数据汇总、趋势分析等图表；</li>
-          <li>【<i nz-icon nzType="group"></i> 导航分组】导航中设置其他种类的显示分组。</li>
+          <li><i nz-icon nzType="folder"></i>【导航分组】导航中的分组，只做显示。</li>
         </ul>
       </div>
     </div>
