更新：用户信息简化

--- a/projects/integrate/admin/organize/users/department/department.component.html
+++ b/projects/integrate/admin/organize/users/department/department.component.html
@@ -5,7 +5,7 @@
       <nz-tree-select
         [nzNodes]="nodes"
         nzShowSearch
-        formControlName="departments"
+        formControlName="department"
         nzPlaceHolder="请选择所属部门"
       ></nz-tree-select>
     </nz-form-control>
