更新：个人中心

--- a/projects/integrate/admin/application/functions/cloud/cloud.component.html
+++ b/projects/integrate/admin/application/functions/cloud/cloud.component.html
@@ -8,7 +8,7 @@
       </nz-list-item-meta>
       <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
         <nz-descriptions-item nzTitle="SecretId">blQYlWDwaz7jntosbqc7qOR8uOyzw9zM</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="SecretKey">****</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="SecretKey">已设置</nz-descriptions-item>
       </nz-descriptions>
       <nz-list-item-extra>
         <button nz-button nzType="link"> 已关联 </button>
