--- a/projects/integrate/admin/application/functions/extend/extend.component.html
+++ b/projects/integrate/admin/application/functions/extend/extend.component.html
@@ -5,8 +5,8 @@
     </nz-list-item-meta>
     <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
       <nz-descriptions-item nzTitle="URL">https://openapi.kainonly.com</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="Key">blQYlWDwaz7jntosbqc7qOR8uOyzw9zM</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="Secret">****</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="Key">D44VjTYtVflj2gvmqCUQHK9sLyVCYO7Z</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="Secret">已设置</nz-descriptions-item>
     </nz-descriptions>
     <nz-list-item-extra>
       <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置">
