--- a/projects/integrate/admin/application/functions/office/office.component.html
+++ b/projects/integrate/admin/application/functions/office/office.component.html
@@ -12,10 +12,10 @@
         <nz-list-item-meta-title><b>飞书</b></nz-list-item-meta-title>
       </nz-list-item-meta>
       <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
-        <nz-descriptions-item nzTitle="AppId">blQYlWDwaz7jntosbqc7qOR8uOyzw9zM</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="AppSecret">****</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="EncryptKey">****</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="VerificationToken">****</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="AppId">cli_a2ea040c57795013</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="AppSecret">已设置</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="EncryptKey">已设置</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="VerificationToken">已设置</nz-descriptions-item>
       </nz-descriptions>
       <nz-list-item-extra>
         <button nz-button nzType="link"> 已关联 </button>
