--- a/projects/integrate/center/work/work.component.scss
+++ b/projects/integrate/center/work/work.component.scss
@@ -1,15 +1,14 @@
 .user {
+  padding: 16px;
   text-align: center;
+  nz-avatar:hover {
+    cursor: pointer;
+  }
   h2 {
-    margin: 16px 0 0;
+    margin: 16px 0 8px;
   }
 }
 
-.user-detail {
-  padding: 12px 24px 0;
-}
-
-.qrcode {
-  margin-top: 12px;
-  text-align: left;
+.details {
+  padding: 12px 16px 0;
 }
