--- a/projects/integrate/center/center.component.html
+++ b/projects/integrate/center/center.component.html
@@ -20,7 +20,7 @@
       </li>
       <li nz-menu-item style="float: right" (click)="openProfile()">
         <i nz-icon nzType="edit"></i>
-        编辑信息
+        基本信息
       </li>
     </ul>
     <nz-layout style="overflow: auto">
@@ -30,46 +30,3 @@
     </nz-layout>
   </nz-layout>
 </nz-layout>
-
-<!--<ul nz-menu nzMode="horizontal">-->
-<!--  <ul>-->
-<!--    <li nz-menu-item nzMatchRouter [routerLink]="['mine', 'workbench']">-->
-<!--      <i nz-icon nzType="desktop"></i> <span>工作台</span>-->
-<!--    </li>-->
-<!--    <li nz-menu-item nzMatchRouter [routerLink]="['mine', 'calendar']">-->
-<!--      <i nz-icon nzType="calendar"></i> <span>日历</span>-->
-<!--    </li>-->
-<!--    <li nz-menu-item nzMatchRouter [routerLink]="['mine', 'notebook']">-->
-<!--      <i nz-icon nzType="book"></i> <span>记事本</span>-->
-<!--    </li>-->
-<!--  </ul>-->
-<!--  <li nz-menu-group nzTitle="我的">-->
-<!--    -->
-<!--  </li>-->
-<!--  <li nz-menu-group nzTitle="个人设置">-->
-<!--    <ul>-->
-<!--      <li nz-menu-item nzMatchRouter [routerLink]="['profile', 'info']">-->
-<!--        <i nz-icon nzType="solution"></i> <span>基本信息</span>-->
-<!--      </li>-->
-<!--      <li nz-menu-item nzMatchRouter [routerLink]="['profile', 'safety']">-->
-<!--        <i nz-icon nzType="safety"></i> <span>安全设置</span>-->
-<!--      </li>-->
-<!--      <li nz-menu-item nzMatchRouter [routerLink]="['profile', 'linked']">-->
-<!--        <i nz-icon nzType="link"></i> <span>帐号绑定</span>-->
-<!--      </li>-->
-<!--      <li nz-menu-item nzMatchRouter [routerLink]="['profile', 'notify']">-->
-<!--        <i nz-icon nzType="notification"></i> <span>通知设置</span>-->
-<!--      </li>-->
-<!--    </ul>-->
-<!--  </li>-->
-<!--  <li nz-menu-group nzTitle="审计日志">-->
-<!--    <ul>-->
-<!--      <li nz-menu-item nzMatchRouter [routerLink]="['audit', 'session']">-->
-<!--        <i nz-icon nzType="audit"></i> <span>会话记录</span>-->
-<!--      </li>-->
-<!--      <li nz-menu-item nzMatchRouter [routerLink]="['audit', 'history']">-->
-<!--        <i nz-icon nzType="history"></i> <span>操作记录</span>-->
-<!--      </li>-->
-<!--    </ul>-->
-<!--  </li>-->
-<!--</ul>-->
