--- a/projects/integrate/center/safety/safety.component.html
+++ b/projects/integrate/center/safety/safety.component.html
@@ -3,10 +3,12 @@
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>账户密码</b></nz-list-item-meta-title>
-        <nz-list-item-meta-description>当前密码强度：强</nz-list-item-meta-description>
+        <nz-list-item-meta-description>
+          推荐采用大写字母、小写字母、数字和特殊字符（@$!%*?&-+）组合的密码
+        </nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置">
+        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="openPassword()">
           <i nz-icon nzType="tool"></i>
         </button>
       </nz-list-item-extra>
@@ -15,11 +17,14 @@
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>安全邮箱</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
-          未设置安全邮箱，同用户邮箱主要用于接收与账号安全相关的通知
+          <ng-container *ngIf="!!wpx.user?.email; else emailEmpty">
+            已设置安全邮箱：{{ wpx.user!.email }}
+          </ng-container>
+          <ng-template #emailEmpty> 未设置安全邮箱，主要用于接收与账号安全相关的通知，推荐采用企业邮箱 </ng-template>
         </nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置">
+        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="openEmail()">
           <i nz-icon nzType="tool"></i>
         </button>
       </nz-list-item-extra>
@@ -30,7 +35,7 @@
         <nz-list-item-meta-description>未设置安全密保，忘记密码时用于重置用户密码</nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置">
+        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
           <i nz-icon nzType="tool"></i>
         </button>
       </nz-list-item-extra>
