更新：密码找回

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <app-stage>
-  <nz-card class="login">
+  <nz-card class="container">
     <div class="logo">
       <nz-avatar [nzSize]="100" nzIcon="user"></nz-avatar>
     </div>
@@ -40,7 +40,7 @@
               </nz-space>
             </nz-col>
             <nz-col></nz-col>
-            <nz-col><a>忘记密码</a></nz-col>
+            <nz-col><a routerLink="/forget">忘记密码</a></nz-col>
           </nz-row>
         </ng-template>
       </nz-form-item>
