更新：功能模块

--- a/projects/integrate/admin/application/functions/functions.component.html
+++ b/projects/integrate/admin/application/functions/functions.component.html
@@ -8,7 +8,16 @@
         <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'office']"> 企业办公 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'extend']"> 扩展服务 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'email']"> 电子邮件 </a>
+      </nz-tab>
+      <nz-tab>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'schedule']"> 定时调度 </a>
+      </nz-tab>
+      <nz-tab>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'collector']"> 日志采集 </a>
+      </nz-tab>
+      <nz-tab>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'openapi']"> 开放服务 </a>
       </nz-tab>
     </nz-tabset>
   </nz-card-tab>
