--- a/projects/integrate/admin/application/functions/cloud/cloud.component.html
+++ b/projects/integrate/admin/application/functions/cloud/cloud.component.html
@@ -5,13 +5,29 @@
         <nz-list-item-meta-title>
           <img height="20px" [src]="['assets', 'cloud', 'tencent.svg'] | wpxAssets" alt="" />
         </nz-list-item-meta-title>
+        <nz-list-item-meta-description *ngIf="!(platform && platform === 'tencent')">
+          当前未关联腾讯云平台
+        </nz-list-item-meta-description>
       </nz-list-item-meta>
-      <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
-        <nz-descriptions-item nzTitle="SecretId">blQYlWDwaz7jntosbqc7qOR8uOyzw9zM</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="SecretKey">已设置</nz-descriptions-item>
+      <nz-descriptions *ngIf="platform && platform === 'tencent'" nzSize="small" nzBordered [nzColumn]="2">
+        <nz-descriptions-item nzTitle="SecretId">{{ data['tencent_secret_id'] }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="SecretKey">{{ data['tencent_secret_key'] }}</nz-descriptions-item>
       </nz-descriptions>
       <nz-list-item-extra>
-        <button nz-button nzType="link"> 已关联 </button>
+        <button nz-button nzType="link" (click)="linkTencent()">设置</button>
+        <ng-container *ngIf="platform && platform === 'tencent'">
+          <button
+            nz-button
+            nzType="link"
+            nzDanger
+            nz-popconfirm
+            nzPopconfirmTitle="您确定要取消该关联吗？"
+            nzPopconfirmPlacement="bottom"
+            (nzOnConfirm)="unlinkTencent()"
+          >
+            取消关联
+          </button>
+        </ng-container>
       </nz-list-item-extra>
     </nz-list-item>
     <nz-list-item>
@@ -40,19 +56,30 @@
 </nz-list>
 
 <nz-card nzTitle="以下设置需要关联一种云厂商作为支持，切换云厂商原设置将失效">
-  <nz-list nzSize="large" nzItemLayout="vertical">
+  <nz-list *ngIf="platform && platform === 'tencent'" nzSize="large" nzItemLayout="vertical">
     <nz-list-item>
       <nz-list-item-meta>
-        <nz-list-item-meta-title><b>静态资源存储</b></nz-list-item-meta-title>
+        <nz-list-item-meta-title><b>COS 对象存储</b></nz-list-item-meta-title>
+        <nz-list-item-meta-description>
+          用于静态资源存储，访问地址请使用云平台设置加速的 CDN内容分发
+        </nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
-        <nz-descriptions-item nzTitle="Bucket">cdn-1231231</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="地域">ap-guangzhou</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="上传限时">300s</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="上传大小">5M</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="存储桶名称">
+          {{ data['tencent_cos_bucket'] | nzSafeNull: '未设置' }}
+        </nz-descriptions-item>
+        <nz-descriptions-item nzTitle="所属地域">
+          {{ data['tencent_cos_region'] | nzSafeNull: '未设置' }}
+        </nz-descriptions-item>
+        <nz-descriptions-item nzTitle="预签名有效期（秒）">
+          {{ data['tencent_cos_expired'] | nzSafeNull: '未设置' }}
+        </nz-descriptions-item>
+        <nz-descriptions-item nzTitle="上传大小限制（KB）">
+          {{ data['tencent_cos_limit'] | nzSafeNull: '未设置' }}
+        </nz-descriptions-item>
       </nz-descriptions>
       <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置">
+        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setCos()">
           <i nz-icon nzType="tool"></i>
         </button>
       </nz-list-item-extra>
@@ -61,8 +88,8 @@
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>消息队列</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
-          取代 NATS JetStream 使用腾讯云 TDMQ Plusar 作用事务补偿</nz-list-item-meta-description
-        >
+          取代 NATS JetStream 使用腾讯云 TDMQ Plusar 作用事务补偿
+        </nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
         <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
