--- a/projects/integrate/admin/application/functions/office/office.component.html
+++ b/projects/integrate/admin/application/functions/office/office.component.html
@@ -10,15 +10,31 @@
           ></nz-avatar>
         </nz-list-item-meta-avatar>
         <nz-list-item-meta-title><b>飞书</b></nz-list-item-meta-title>
+        <nz-list-item-meta-description *ngIf="!(platform && platform === 'feishu')">
+          当前未关联飞书
+        </nz-list-item-meta-description>
       </nz-list-item-meta>
-      <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
-        <nz-descriptions-item nzTitle="AppId">cli_a2ea040c57795013</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="AppSecret">已设置</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="EncryptKey">已设置</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="VerificationToken">已设置</nz-descriptions-item>
+      <nz-descriptions *ngIf="platform && platform === 'feishu'" nzSize="small" nzBordered [nzColumn]="2">
+        <nz-descriptions-item nzTitle="应用 ID">{{ data['feishu_app_id'] }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="应用密钥">{{ data['feishu_app_secret'] }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="事件订阅安全校验数据密钥">{{ data['feishu_encrypt_key'] }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="事件订阅验证令牌">{{ data['feishu_verification_token'] }}</nz-descriptions-item>
       </nz-descriptions>
       <nz-list-item-extra>
-        <button nz-button nzType="link"> 已关联 </button>
+        <button nz-button nzType="link" (click)="linkFeishu()">设置</button>
+        <ng-container *ngIf="platform && platform === 'feishu'">
+          <button
+            nz-button
+            nzType="link"
+            nzDanger
+            nz-popconfirm
+            nzPopconfirmTitle="您确定要取消该关联吗？"
+            nzPopconfirmPlacement="bottom"
+            (nzOnConfirm)="unlinkFeishu()"
+          >
+            取消关联
+          </button>
+        </ng-container>
       </nz-list-item-extra>
     </nz-list-item>
     <nz-list-item>
@@ -31,7 +47,7 @@
           ></nz-avatar>
         </nz-list-item-meta-avatar>
         <nz-list-item-meta-title><b>企业微信</b></nz-list-item-meta-title>
-        <nz-list-item-meta-description>当前未关联企业微信账号</nz-list-item-meta-description>
+        <nz-list-item-meta-description>当前未关联企业微信</nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
         <button nz-button nzType="link" disabled> 计划中 </button>
@@ -47,7 +63,7 @@
           ></nz-avatar>
         </nz-list-item-meta-avatar>
         <nz-list-item-meta-title><b>钉钉</b></nz-list-item-meta-title>
-        <nz-list-item-meta-description>当前未关联钉钉账号</nz-list-item-meta-description>
+        <nz-list-item-meta-description>当前未关联钉钉</nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
         <button nz-button nzType="link" disabled> 计划中 </button>
@@ -57,14 +73,17 @@
 </nz-list>
 
 <nz-card nzTitle="以下设置需要关联一种企业平台作为支持，切换企业平台原设置将失效">
-  <nz-list nzSize="large" nzItemLayout="vertical">
+  <nz-list *ngIf="platform && platform === 'feishu'" nzSize="large" nzItemLayout="vertical">
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>第三方免登陆</b></nz-list-item-meta-title>
         <nz-list-item-meta-description> 允许通过企业平台用户身份进行登录 </nz-list-item-meta-description>
       </nz-list-item-meta>
+      <nz-descriptions *ngIf="platform && platform === 'feishu'" nzSize="small" nzBordered [nzColumn]="2">
+        <nz-descriptions-item nzTitle="免登授权码跳转地址">{{ data['redirect_url'] }}</nz-descriptions-item>
+      </nz-descriptions>
       <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
+        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setRedirect()">
           <i nz-icon nzType="tool"></i>
         </button>
       </nz-list-item-extra>
@@ -76,11 +95,6 @@
           针对任务资源提供的开放 API，可以支持任务的创建、更新、删除等操作
         </nz-list-item-meta-description>
       </nz-list-item-meta>
-      <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
-          <i nz-icon nzType="tool"></i>
-        </button>
-      </nz-list-item-extra>
     </nz-list-item>
     <nz-list-item>
       <nz-list-item-meta>
@@ -91,22 +105,12 @@
           操作对应数据
         </nz-list-item-meta-description>
       </nz-list-item-meta>
-      <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
-          <i nz-icon nzType="tool"></i>
-        </button>
-      </nz-list-item-extra>
     </nz-list-item>
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-title><b>消息</b></nz-list-item-meta-title>
         <nz-list-item-meta-description> 使用飞书提供了一系列即时通讯场景的 API </nz-list-item-meta-description>
       </nz-list-item-meta>
-      <nz-list-item-extra>
-        <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
-          <i nz-icon nzType="tool"></i>
-        </button>
-      </nz-list-item-extra>
     </nz-list-item>
   </nz-list>
 </nz-card>
