更新：动态配置

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,7 @@
           <nz-row style="padding: 0.25em 0" nzJustify="space-between">
             <nz-col>
               <nz-space>
-                <a *nzSpaceItem nz-tooltip="飞书" (click)="feishu()">
+                <a *nzSpaceItem nz-tooltip="飞书" (click)="feishuOAuth()">
                   <nz-avatar nzSize="small" nzShape="square" [nzSrc]="['assets', 'feishu.png'] | wpxAssets"></nz-avatar>
                 </a>
               </nz-space>
